--- a/shuishui/res/values/strings.xml
+++ b/shuishui/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="title_activity_down_image">DownImageActivity</string>
     <string name="title_activity_fragment_demo">FragmentDemoActivity</string>
     <string name="title_activity_fragment_main">FragmentMainActivity</string>
-
+	<string name="fragment_title">DemoFragmentDemoFragmentDemoFragmentDemoFragment</string>
 </resources>
