--- a/shuishui/res/values/strings.xml
+++ b/shuishui/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="title_activity_down_image">DownImageActivity</string>
     <string name="title_activity_fragment_demo">FragmentDemoActivity</string>
     <string name="title_activity_fragment_main">FragmentMainActivity</string>
-	<string name="fragment_title">DemoFragmentDemoFragmentDemoFragmentDemoFragment</string>
+    <string name="fragment_title">DemoFragmentDemoFragmentDemoFragmentDemoFragment</string>
+    <string name="title_activity_camera_setting">CameraSettingActivity</string>
+	<string name="no_camera">没有相机</string>
 </resources>
