--- a/shuishui/res/values/strings.xml
+++ b/shuishui/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="fragment_title">DemoFragmentDemoFragmentDemoFragmentDemoFragment</string>
     <string name="title_activity_camera_setting">CameraSettingActivity</string>
 	<string name="no_camera">没有相机</string>
+	<string name="capture">拍照</string>
+	<string name="changeshine">切换平衡光</string>
 </resources>
